--- a/styles.css
+++ b/styles.css
@@ -12,11 +12,11 @@
   display: block;
 }
 
-.window-image {
+.window-container .window-image {
   height: 100%;
 }
 
-.window-image img {
+.window-container .window-image img {
   height: 100%;
   object-fit: cover;
   width: 100%;
